--- a/Excusify/Excusify/Base.lproj/Main.storyboard
+++ b/Excusify/Excusify/Base.lproj/Main.storyboard
@@ -86,6 +86,8 @@
                     </view>
                     <navigationItem key="navigationItem" id="CB9-zM-OcU"/>
                     <connections>
+                        <outlet property="excuseEventTextField" destination="JPL-L5-5fN" id="xpc-2g-NHV"/>
+                        <outlet property="excuseReasonTextField" destination="oGs-z4-6Km" id="lU9-mQ-wQM"/>
                         <segue destination="Bbp-JL-luG" kind="presentation" identifier="searchSegue" id="whL-oq-r0v"/>
                     </connections>
                 </viewController>
@@ -113,15 +115,38 @@
                                     </navigationItem>
                                 </items>
                             </navigationBar>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Excuse TEXT" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c6H-xw-UTx">
+                                <rect key="frame" x="62.5" y="283.5" width="250" height="20.5"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="250" id="OUo-zk-rch"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dqv-o3-fLL">
+                                <rect key="frame" x="129" y="404" width="117" height="30"/>
+                                <state key="normal" title="Give me another!"/>
+                                <connections>
+                                    <action selector="giveMeAnotherWasPressed:" destination="Bbp-JL-luG" eventType="touchUpInside" id="axl-v9-bHH"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="dqv-o3-fLL" firstAttribute="centerX" secondItem="c6H-xw-UTx" secondAttribute="centerX" id="8kI-fm-Lxl"/>
                             <constraint firstItem="AZs-jg-FVU" firstAttribute="width" secondItem="XSo-z8-xYh" secondAttribute="width" id="96m-6o-bGv"/>
+                            <constraint firstItem="dqv-o3-fLL" firstAttribute="top" secondItem="c6H-xw-UTx" secondAttribute="bottom" constant="100" id="H2g-Cc-N3Q"/>
+                            <constraint firstItem="c6H-xw-UTx" firstAttribute="centerX" secondItem="TDo-l8-UIs" secondAttribute="centerX" id="SYg-T7-4gO"/>
                             <constraint firstItem="AZs-jg-FVU" firstAttribute="leading" secondItem="TDo-l8-UIs" secondAttribute="leading" id="glG-qn-iJo"/>
                             <constraint firstItem="TDo-l8-UIs" firstAttribute="top" secondItem="AZs-jg-FVU" secondAttribute="top" id="l0g-Fa-Wph"/>
+                            <constraint firstItem="c6H-xw-UTx" firstAttribute="centerY" secondItem="TDo-l8-UIs" secondAttribute="centerY" constant="-50" id="tKN-tX-o1b"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="TDo-l8-UIs"/>
                     </view>
+                    <connections>
+                        <outlet property="excuseTextLabel" destination="c6H-xw-UTx" id="7xV-9s-Rsv"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JBd-TW-K12" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
